// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scaffold > buildDependencyList > snapshot: memory-nats 1`] = `
[
  "@lindorm/proteus",
  "@lindorm/iris",
  "nats",
]
`;

exports[`scaffold > buildDependencyList > snapshot: none-none 1`] = `[]`;

exports[`scaffold > buildDependencyList > snapshot: postgres-rabbit 1`] = `
[
  "@lindorm/proteus",
  "pg",
  "@lindorm/iris",
  "amqplib",
]
`;

exports[`scaffold > buildDependencyList > snapshot: redis-redis 1`] = `
[
  "@lindorm/proteus",
  "ioredis",
  "@lindorm/iris",
]
`;

exports[`scaffold > buildDependencyList > snapshot: sqlite-kafka 1`] = `
[
  "@lindorm/proteus",
  "better-sqlite3",
  "@lindorm/iris",
  "kafkajs",
]
`;

exports[`scaffold > buildEnvLines > snapshot: mongo-nats 1`] = `
[
  "NODE_ENV=development",
  "PYLON_KEK=kryptos:test-fixed-kek-placeholder",
  "MONGO_URL=mongodb://localhost:27017/app",
  "NATS_SERVERS=localhost:4222",
]
`;

exports[`scaffold > buildEnvLines > snapshot: mysql-rabbit 1`] = `
[
  "NODE_ENV=development",
  "PYLON_KEK=kryptos:test-fixed-kek-placeholder",
  "MYSQL_URL=mysql://localhost:3306/app",
  "RABBIT_URL=amqp://localhost:5672",
]
`;

exports[`scaffold > buildEnvLines > snapshot: none-none + auth 1`] = `
[
  "NODE_ENV=development",
  "PYLON_KEK=kryptos:test-fixed-kek-placeholder",
  "AUTH_CLIENT_ID=",
  "AUTH_CLIENT_SECRET=",
  "AUTH_ISSUER=https://auth.example.com",
]
`;

exports[`scaffold > buildEnvLines > snapshot: none-none 1`] = `
[
  "NODE_ENV=development",
  "PYLON_KEK=kryptos:test-fixed-kek-placeholder",
]
`;

exports[`scaffold > buildEnvLines > snapshot: postgres-rabbit + auth 1`] = `
[
  "NODE_ENV=development",
  "PYLON_KEK=kryptos:test-fixed-kek-placeholder",
  "POSTGRES_URL=postgresql://localhost:5432/app",
  "RABBIT_URL=amqp://localhost:5672",
  "AUTH_CLIENT_ID=",
  "AUTH_CLIENT_SECRET=",
  "AUTH_ISSUER=https://auth.example.com",
]
`;

exports[`scaffold > buildEnvLines > snapshot: sqlite-redis 1`] = `
[
  "NODE_ENV=development",
  "PYLON_KEK=kryptos:test-fixed-kek-placeholder",
  "SQLITE_PATH=./data/app.db",
  "REDIS_URL=redis://localhost:6379",
]
`;

exports[`scaffold > copyTemplates > base + http + socket + workers + webhooks 1`] = `
{
  ".gitignore": "node_modules/
dist/
coverage/
.nx/cache/
.config-cache/

.env
.env.*
!.env.example

.DS_Store
*.log
",
  "config/default.yml": "server:
  port: 3000

logger:
  level: info
",
  "config/development.yml": "# Overrides applied when NODE_ENV=development.
# Merged on top of default.yml — only list the keys you want to change.
logger:
  level: debug
",
  "config/production.yml": "# Overrides applied when NODE_ENV=production.
# Most prod-specific values belong in secrets / env vars, not here — reserve
# this file for non-sensitive knobs (timeouts, pool sizes, feature flags).
logger:
  level: info
",
  "config/test.yml": "# Overrides applied when NODE_ENV=test.
# Keeps test output quiet unless something actually goes wrong.
logger:
  level: error
",
  "src/features/example/example-handler.ts": "import { z } from "zod";
import type { ServerHandler } from "../../types/context.js";

export const exampleSchema = z.object({
  name: z.string().optional(),
});

export const exampleHandler: ServerHandler<typeof exampleSchema> = async (ctx) => {
  const name = ctx.data.name ?? "world";
  return { body: { message: \`Hello, \${name}!\` } };
};
",
  "src/features/ping/ping-handler.ts": "import { z } from "zod";
import type { ServerSocketHandler } from "../../types/context.js";

export const pingSchema = z.object({
  message: z.string().optional(),
});

export const pingHandler: ServerSocketHandler<typeof pingSchema> = async (ctx) => {
  ctx.logger.info("Received ping", { data: ctx.data });

  ctx.ack?.({
    pong: true,
    message: ctx.data.message,
    receivedAt: new Date().toISOString(),
  });
};
",
  "src/features/webhooks/create-webhook-handler.ts": "import { WebhookAuth, WebhookMethod } from "@lindorm/pylon";
import { WebhookSubscription } from "@lindorm/pylon/entities";
import { z } from "zod";
import type { ServerHandler } from "../../types/context.js";

export const createWebhookSchema = z.object({
  auth: z.nativeEnum(WebhookAuth),
  event: z.string(),
  method: z.nativeEnum(WebhookMethod).optional(),
  headers: z.record(z.string(), z.string()),
  ownerId: z.string(),
  tenantId: z.string().nullable().optional(),
  url: z.string().url(),

  authHeaders: z.record(z.string(), z.string()),

  username: z.string().nullable().optional(),
  password: z.string().nullable().optional(),

  audience: z.string().nullable().optional(),
  authLocation: z.enum(["body", "header"]).nullable().optional(),
  clientId: z.string().nullable().optional(),
  clientSecret: z.string().nullable().optional(),
  contentType: z
    .enum(["application/json", "application/x-www-form-urlencoded"])
    .nullable()
    .optional(),
  issuer: z.string().nullable().optional(),
  scope: z.array(z.string()).optional(),
  tokenUri: z.string().url().nullable().optional(),
});

export const createWebhookHandler: ServerHandler<typeof createWebhookSchema> = async (
  ctx,
) => {
  const repository = ctx.proteus!.repository(WebhookSubscription);
  const subscription = await repository.save(ctx.data);

  return { body: subscription, status: 201 };
};
",
  "src/features/webhooks/delete-webhook-handler.ts": "import { ClientError } from "@lindorm/errors";
import { WebhookSubscription } from "@lindorm/pylon/entities";
import { z } from "zod";
import type { ServerHandler } from "../../types/context.js";

export const deleteWebhookSchema = z.object({
  id: z.string(),
});

export const deleteWebhookHandler: ServerHandler<typeof deleteWebhookSchema> = async (
  ctx,
) => {
  const repository = ctx.proteus!.repository(WebhookSubscription);
  const existing = await repository.findOne({ id: ctx.data.id });

  if (!existing) {
    throw new ClientError("Webhook subscription not found", {
      status: ClientError.Status.NotFound,
    });
  }

  await repository.destroy(existing);

  return { status: 204 };
};
",
  "src/features/webhooks/get-webhook-handler.ts": "import { ClientError } from "@lindorm/errors";
import { WebhookSubscription } from "@lindorm/pylon/entities";
import { z } from "zod";
import type { ServerHandler } from "../../types/context.js";

export const getWebhookSchema = z.object({
  id: z.string(),
});

export const getWebhookHandler: ServerHandler<typeof getWebhookSchema> = async (ctx) => {
  const repository = ctx.proteus!.repository(WebhookSubscription);
  const subscription = await repository.findOne({ id: ctx.data.id });

  if (!subscription) {
    throw new ClientError("Webhook subscription not found", {
      status: ClientError.Status.NotFound,
    });
  }

  return { body: subscription };
};
",
  "src/features/webhooks/list-webhooks-handler.ts": "import { WebhookSubscription } from "@lindorm/pylon/entities";
import { z } from "zod";
import type { ServerHandler } from "../../types/context.js";

export const listWebhooksSchema = z.object({
  ownerId: z.string(),
  tenantId: z.string().nullable().optional(),
});

export const listWebhooksHandler: ServerHandler<typeof listWebhooksSchema> = async (
  ctx,
) => {
  const repository = ctx.proteus!.repository(WebhookSubscription);
  const query: { ownerId: string; tenantId?: string | null } = {
    ownerId: ctx.data.ownerId,
  };

  if (ctx.data.tenantId !== undefined) {
    query.tenantId = ctx.data.tenantId;
  }

  const subscriptions = await repository.find(query);

  return { body: subscriptions };
};
",
  "src/features/webhooks/update-webhook-handler.ts": "import { ClientError } from "@lindorm/errors";
import { WebhookMethod } from "@lindorm/pylon";
import { WebhookSubscription } from "@lindorm/pylon/entities";
import { z } from "zod";
import type { ServerHandler } from "../../types/context.js";

export const updateWebhookSchema = z.object({
  id: z.string(),

  event: z.string().optional(),
  method: z.nativeEnum(WebhookMethod).optional(),
  headers: z.record(z.string(), z.string()),
  tenantId: z.string().nullable().optional(),
  url: z.string().url().optional(),

  authHeaders: z.record(z.string(), z.string()),

  username: z.string().nullable().optional(),
  password: z.string().nullable().optional(),

  audience: z.string().nullable().optional(),
  authLocation: z.enum(["body", "header"]).nullable().optional(),
  clientId: z.string().nullable().optional(),
  clientSecret: z.string().nullable().optional(),
  contentType: z
    .enum(["application/json", "application/x-www-form-urlencoded"])
    .nullable()
    .optional(),
  issuer: z.string().nullable().optional(),
  scope: z.array(z.string()).optional(),
  tokenUri: z.string().url().nullable().optional(),
});

export const updateWebhookHandler: ServerHandler<typeof updateWebhookSchema> = async (
  ctx,
) => {
  const repository = ctx.proteus!.repository(WebhookSubscription);
  const existing = await repository.findOne({ id: ctx.data.id });

  if (!existing) {
    throw new ClientError("Webhook subscription not found", {
      status: ClientError.Status.NotFound,
    });
  }

  const { id: _ignored, ...changes } = ctx.data;

  const updated = await repository.save({
    ...existing,
    ...changes,
    errorCount: 0,
    suspendedAt: null,
  });

  return { body: updated };
};
",
  "src/index.ts": "import { pylon } from "./pylon/pylon.js";

void pylon.start();
",
  "src/listeners/_middleware.ts": "import { socketExampleMiddleware } from "../middleware/socket-example.js";

export const MIDDLEWARE = [socketExampleMiddleware];
",
  "src/listeners/ping.ts": "import { useSchema } from "@lindorm/pylon";
import type { ServerSocketMiddleware } from "../types/context.js";
import { pingHandler, pingSchema } from "../features/ping/ping-handler.js";

export const ON: Array<ServerSocketMiddleware> = [useSchema(pingSchema), pingHandler];
",
  "src/logger/index.ts": "import { Logger } from "@lindorm/logger";
import { config } from "../pylon/config.js";

export const logger = new Logger({
  level: config.logger.level,
  readable: config.node.env !== "production",
});
",
  "src/middleware/http-example.ts": "import type { ServerHttpMiddleware } from "../types/context.js";

export const httpExampleMiddleware: ServerHttpMiddleware = async (ctx, next) => {
  ctx.set("x-example-header", "true");

  await next();
};
",
  "src/middleware/socket-example.ts": "import type { ServerSocketMiddleware } from "../types/context.js";

export const socketExampleMiddleware: ServerSocketMiddleware = async (ctx, next) => {
  ctx.logger.warn(
    "This is already logged but as an example we'll do it again as a warn",
    {
      event: ctx.event,
      eventId: ctx.eventId,
      socketId: ctx.io.socket.id,
    },
  );

  await next();
};
",
  "src/pylon/amphora.ts": "import { Amphora } from "@lindorm/amphora";
import { logger } from "../logger/index.js";
import { config } from "./config.js";

export const amphora = new Amphora({ logger });

amphora.env(config.pylon.kek);
",
  "src/routes/_middleware.ts": "import { httpExampleMiddleware } from "../middleware/http-example.js";

export const MIDDLEWARE = [httpExampleMiddleware];
",
  "src/routes/v1/example.ts": "import { useHandler, useSchema } from "@lindorm/pylon";
import type { ServerHttpMiddleware } from "../../types/context.js";
import { exampleHandler, exampleSchema } from "../../features/example/example-handler.js";

export const GET: Array<ServerHttpMiddleware> = [
  useSchema(exampleSchema),
  useHandler(exampleHandler),
];
",
  "src/routes/webhooks/[id].ts": "// TODO: add auth middleware — these routes expose webhook subscription management.
import { useHandler, useSchema } from "@lindorm/pylon";
import type { ServerHttpMiddleware } from "../../types/context.js";
import {
  deleteWebhookHandler,
  deleteWebhookSchema,
} from "../../features/webhooks/delete-webhook-handler.js";
import {
  getWebhookHandler,
  getWebhookSchema,
} from "../../features/webhooks/get-webhook-handler.js";
import {
  updateWebhookHandler,
  updateWebhookSchema,
} from "../../features/webhooks/update-webhook-handler.js";

export const GET: Array<ServerHttpMiddleware> = [
  useSchema(getWebhookSchema),
  useHandler(getWebhookHandler),
];

export const PATCH: Array<ServerHttpMiddleware> = [
  useSchema(updateWebhookSchema),
  useHandler(updateWebhookHandler),
];

export const DELETE: Array<ServerHttpMiddleware> = [
  useSchema(deleteWebhookSchema),
  useHandler(deleteWebhookHandler),
];
",
  "src/routes/webhooks/index.ts": "// TODO: add auth middleware — these routes expose webhook subscription management.
import { useHandler, useSchema } from "@lindorm/pylon";
import type { ServerHttpMiddleware } from "../../types/context.js";
import {
  createWebhookHandler,
  createWebhookSchema,
} from "../../features/webhooks/create-webhook-handler.js";
import {
  listWebhooksHandler,
  listWebhooksSchema,
} from "../../features/webhooks/list-webhooks-handler.js";

export const POST: Array<ServerHttpMiddleware> = [
  useSchema(createWebhookSchema),
  useHandler(createWebhookHandler),
];

export const GET: Array<ServerHttpMiddleware> = [
  useSchema(listWebhooksSchema),
  useHandler(listWebhooksHandler),
];
",
  "src/workers/alive.ts": "import type { LindormWorkerCallback } from "@lindorm/worker";

export const CALLBACK: LindormWorkerCallback = async (ctx) => {
  ctx.logger.info("I'm alive");
};

export const INTERVAL = "1m";
",
  "tsconfig.build.json": "{
  "extends": "./tsconfig.json",
  "compilerOptions": {
    "noEmit": false,
    "declaration": true,
    "declarationMap": true,
    "sourceMap": true,
    "removeComments": true
  },
  "exclude": [
    "**/*.test.ts",
    "**/*.integration.ts",
    "**/__fixtures__/**",
    "**/__mocks__/**",
    "**/__snapshots__/**"
  ]
}
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "lib": ["ESNext"],
    "module": "NodeNext",
    "moduleResolution": "NodeNext",
    "esModuleInterop": true,
    "skipLibCheck": true,
    "strict": true,
    "verbatimModuleSyntax": true,
    "resolveJsonModule": true,
    "forceConsistentCasingInFileNames": true,
    "rootDir": "./src",
    "outDir": "./dist",
    "noEmit": true,
    "types": ["node"]
  },
  "include": ["src/**/*"]
}
",
  "vitest.config.mjs": "import { defineConfig } from "vitest/config";

export default defineConfig({
  test: {
    globals: false,
    environment: "node",
    include: ["src/**/*.test.ts"],
  },
});
",
}
`;

exports[`scaffold > copyTemplates > base + http overlay 1`] = `
{
  ".gitignore": "node_modules/
dist/
coverage/
.nx/cache/
.config-cache/

.env
.env.*
!.env.example

.DS_Store
*.log
",
  "config/default.yml": "server:
  port: 3000

logger:
  level: info
",
  "config/development.yml": "# Overrides applied when NODE_ENV=development.
# Merged on top of default.yml — only list the keys you want to change.
logger:
  level: debug
",
  "config/production.yml": "# Overrides applied when NODE_ENV=production.
# Most prod-specific values belong in secrets / env vars, not here — reserve
# this file for non-sensitive knobs (timeouts, pool sizes, feature flags).
logger:
  level: info
",
  "config/test.yml": "# Overrides applied when NODE_ENV=test.
# Keeps test output quiet unless something actually goes wrong.
logger:
  level: error
",
  "src/features/example/example-handler.ts": "import { z } from "zod";
import type { ServerHandler } from "../../types/context.js";

export const exampleSchema = z.object({
  name: z.string().optional(),
});

export const exampleHandler: ServerHandler<typeof exampleSchema> = async (ctx) => {
  const name = ctx.data.name ?? "world";
  return { body: { message: \`Hello, \${name}!\` } };
};
",
  "src/index.ts": "import { pylon } from "./pylon/pylon.js";

void pylon.start();
",
  "src/logger/index.ts": "import { Logger } from "@lindorm/logger";
import { config } from "../pylon/config.js";

export const logger = new Logger({
  level: config.logger.level,
  readable: config.node.env !== "production",
});
",
  "src/middleware/http-example.ts": "import type { ServerHttpMiddleware } from "../types/context.js";

export const httpExampleMiddleware: ServerHttpMiddleware = async (ctx, next) => {
  ctx.set("x-example-header", "true");

  await next();
};
",
  "src/pylon/amphora.ts": "import { Amphora } from "@lindorm/amphora";
import { logger } from "../logger/index.js";
import { config } from "./config.js";

export const amphora = new Amphora({ logger });

amphora.env(config.pylon.kek);
",
  "src/routes/_middleware.ts": "import { httpExampleMiddleware } from "../middleware/http-example.js";

export const MIDDLEWARE = [httpExampleMiddleware];
",
  "src/routes/v1/example.ts": "import { useHandler, useSchema } from "@lindorm/pylon";
import type { ServerHttpMiddleware } from "../../types/context.js";
import { exampleHandler, exampleSchema } from "../../features/example/example-handler.js";

export const GET: Array<ServerHttpMiddleware> = [
  useSchema(exampleSchema),
  useHandler(exampleHandler),
];
",
  "tsconfig.build.json": "{
  "extends": "./tsconfig.json",
  "compilerOptions": {
    "noEmit": false,
    "declaration": true,
    "declarationMap": true,
    "sourceMap": true,
    "removeComments": true
  },
  "exclude": [
    "**/*.test.ts",
    "**/*.integration.ts",
    "**/__fixtures__/**",
    "**/__mocks__/**",
    "**/__snapshots__/**"
  ]
}
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "lib": ["ESNext"],
    "module": "NodeNext",
    "moduleResolution": "NodeNext",
    "esModuleInterop": true,
    "skipLibCheck": true,
    "strict": true,
    "verbatimModuleSyntax": true,
    "resolveJsonModule": true,
    "forceConsistentCasingInFileNames": true,
    "rootDir": "./src",
    "outDir": "./dist",
    "noEmit": true,
    "types": ["node"]
  },
  "include": ["src/**/*"]
}
",
  "vitest.config.mjs": "import { defineConfig } from "vitest/config";

export default defineConfig({
  test: {
    globals: false,
    environment: "node",
    include: ["src/**/*.test.ts"],
  },
});
",
}
`;

exports[`scaffold > copyTemplates > base only — http false, socket false 1`] = `
{
  ".gitignore": "node_modules/
dist/
coverage/
.nx/cache/
.config-cache/

.env
.env.*
!.env.example

.DS_Store
*.log
",
  "config/default.yml": "server:
  port: 3000

logger:
  level: info
",
  "config/development.yml": "# Overrides applied when NODE_ENV=development.
# Merged on top of default.yml — only list the keys you want to change.
logger:
  level: debug
",
  "config/production.yml": "# Overrides applied when NODE_ENV=production.
# Most prod-specific values belong in secrets / env vars, not here — reserve
# this file for non-sensitive knobs (timeouts, pool sizes, feature flags).
logger:
  level: info
",
  "config/test.yml": "# Overrides applied when NODE_ENV=test.
# Keeps test output quiet unless something actually goes wrong.
logger:
  level: error
",
  "src/index.ts": "import { pylon } from "./pylon/pylon.js";

void pylon.start();
",
  "src/logger/index.ts": "import { Logger } from "@lindorm/logger";
import { config } from "../pylon/config.js";

export const logger = new Logger({
  level: config.logger.level,
  readable: config.node.env !== "production",
});
",
  "src/pylon/amphora.ts": "import { Amphora } from "@lindorm/amphora";
import { logger } from "../logger/index.js";
import { config } from "./config.js";

export const amphora = new Amphora({ logger });

amphora.env(config.pylon.kek);
",
  "tsconfig.build.json": "{
  "extends": "./tsconfig.json",
  "compilerOptions": {
    "noEmit": false,
    "declaration": true,
    "declarationMap": true,
    "sourceMap": true,
    "removeComments": true
  },
  "exclude": [
    "**/*.test.ts",
    "**/*.integration.ts",
    "**/__fixtures__/**",
    "**/__mocks__/**",
    "**/__snapshots__/**"
  ]
}
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "lib": ["ESNext"],
    "module": "NodeNext",
    "moduleResolution": "NodeNext",
    "esModuleInterop": true,
    "skipLibCheck": true,
    "strict": true,
    "verbatimModuleSyntax": true,
    "resolveJsonModule": true,
    "forceConsistentCasingInFileNames": true,
    "rootDir": "./src",
    "outDir": "./dist",
    "noEmit": true,
    "types": ["node"]
  },
  "include": ["src/**/*"]
}
",
  "vitest.config.mjs": "import { defineConfig } from "vitest/config";

export default defineConfig({
  test: {
    globals: false,
    environment: "node",
    include: ["src/**/*.test.ts"],
  },
});
",
}
`;

exports[`scaffold > scaffold orchestration > all-on: postgres + redis + rabbit + sessions + auth + rateLimit + workers > .env 1`] = `
"NODE_ENV=development
PYLON_KEK=kryptos:test-fixed-kek-placeholder
POSTGRES_URL=postgresql://localhost:5432/app
REDIS_URL=redis://localhost:6379
RABBIT_URL=amqp://localhost:5672
AUTH_CLIENT_ID=
AUTH_CLIENT_SECRET=
AUTH_ISSUER=https://auth.example.com
"
`;

exports[`scaffold > scaffold orchestration > all-on: postgres + redis + rabbit + sessions + auth + rateLimit + workers > config.ts 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  postgres: z.object({
    url: z.string(),
  }),
  redis: z.object({
    url: z.string(),
  }),
  rabbit: z.object({
    url: z.string(),
  }),
  auth: z.object({
    clientId: z.string(),
    clientSecret: z.string(),
    issuer: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > scaffold orchestration > all-on: postgres + redis + rabbit + sessions + auth + rateLimit + workers > pylon.ts 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/postgres/source.js";
import { source as rateLimitSource } from "../proteus/redis/source.js";
import { attachSourcesMiddlewares } from "../middleware/attach-sources.js";
import { source as irisSource } from "../iris/source.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  httpMiddleware: [...attachSourcesMiddlewares],
  socket: {
    enabled: true,
    listeners: join(import.meta.dirname, "..", "listeners"),
    middleware: [...attachSourcesMiddlewares],
  },
  rooms: { presence: true },
  proteus: proteusSource,
  kryptos: { enabled: true },
  iris: irisSource,
  queue: { enabled: true },
  webhook: { enabled: true },
  audit: {
    enabled: true,
    // sanitise: (body) => body,
    // skip: (ctx) => false,
    // entities: [],
  },
  session: {
    enabled: true,
    proteus: rateLimitSource,
    name: "sid",
    encrypted: true,
    httpOnly: true,
    sameSite: "lax",
    secure: false, // TODO: flip to true in production (behind HTTPS)
    expiry: "7d",
  },
  auth: {
    clientId: config.auth.clientId,
    clientSecret: config.auth.clientSecret,
    issuer: config.auth.issuer,
    router: {
      pathPrefix: "/auth",
      authorize: {
        scope: ["openid", "profile", "email"],
        responseType: "code",
      },
    },
  },
  rateLimit: {
    enabled: true,
    proteus: rateLimitSource,
    strategy: "fixed",
    window: "1m",
    max: 60,
    // TODO: tune strategy/window/max for your traffic
  },
  workers: join(import.meta.dirname, "..", "workers"),
  setup: async () => {
    await proteusSource.connect();
    await rateLimitSource.connect();
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > scaffold orchestration > all-on: postgres + redis + rabbit + sessions + auth + rateLimit + workers > tree 1`] = `
[
  ".env",
  ".gitignore",
  "config/default.yml",
  "config/development.yml",
  "config/production.yml",
  "config/test.yml",
  "docker-compose.yml",
  "package.json",
  "src/features/example/example-handler.ts",
  "src/features/ping/ping-handler.ts",
  "src/features/webhooks/create-webhook-handler.ts",
  "src/features/webhooks/delete-webhook-handler.ts",
  "src/features/webhooks/get-webhook-handler.ts",
  "src/features/webhooks/list-webhooks-handler.ts",
  "src/features/webhooks/update-webhook-handler.ts",
  "src/index.ts",
  "src/iris/publishers/sample-publisher.ts",
  "src/iris/subscribers/sample-subscriber.ts",
  "src/listeners/_middleware.ts",
  "src/listeners/ping.ts",
  "src/logger/index.ts",
  "src/middleware/attach-sources.ts",
  "src/middleware/http-example.ts",
  "src/middleware/socket-example.ts",
  "src/proteus/postgres/entities/.gitkeep",
  "src/proteus/postgres/migrations/.gitkeep",
  "src/proteus/postgres/source.ts",
  "src/proteus/redis/entities/.gitkeep",
  "src/proteus/redis/source.ts",
  "src/pylon/amphora.ts",
  "src/pylon/config.ts",
  "src/pylon/pylon.ts",
  "src/routes/_middleware.ts",
  "src/routes/v1/example.ts",
  "src/routes/webhooks/[id].ts",
  "src/routes/webhooks/index.ts",
  "src/types/context.ts",
  "src/workers/alive.ts",
  "src/workers/amphora-entity-sync.ts",
  "src/workers/expiry-cleanup.ts",
  "src/workers/kryptos-rotation.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.mjs",
]
`;

exports[`scaffold > scaffold orchestration > auth-only combo (auto-forces session) > .env 1`] = `
"NODE_ENV=development
PYLON_KEK=kryptos:test-fixed-kek-placeholder
AUTH_CLIENT_ID=
AUTH_CLIENT_SECRET=
AUTH_ISSUER=https://auth.example.com
"
`;

exports[`scaffold > scaffold orchestration > auth-only combo (auto-forces session) > config.ts 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  auth: z.object({
    clientId: z.string(),
    clientSecret: z.string(),
    issuer: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > scaffold orchestration > auth-only combo (auto-forces session) > pylon.ts 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  session: {
    enabled: true,
    name: "sid",
    encrypted: true,
    httpOnly: true,
    sameSite: "lax",
    secure: false, // TODO: flip to true in production (behind HTTPS)
    expiry: "7d",
  },
  auth: {
    clientId: config.auth.clientId,
    clientSecret: config.auth.clientSecret,
    issuer: config.auth.issuer,
    router: {
      pathPrefix: "/auth",
      authorize: {
        scope: ["openid", "profile", "email"],
        responseType: "code",
      },
    },
  },
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > scaffold orchestration > multi-driver ctx extension > emits ExtraSources type and attach-sources middleware when 2+ drivers > attach-sources.ts 1`] = `
"import { createAttachProteusSourceMiddleware } from "@lindorm/pylon";
import type { ServerHttpMiddleware } from "../types/context.js";
import { source as redisSource } from "../proteus/redis/source.js";
import { source as memorySource } from "../proteus/memory/source.js";

/**
 * Pylon middleware instances that mount the non-primary Proteus sources on
 * the request context as \`ctx.<driver>\`. Each entry is produced by the
 * public \`createAttachProteusSourceMiddleware\` factory from \`@lindorm/pylon\`.
 *
 * Use via pylon options:
 *
 *     new Pylon({ httpMiddleware: [...attachSourcesMiddlewares] })
 */
export const attachSourcesMiddlewares: Array<ServerHttpMiddleware> = [
  createAttachProteusSourceMiddleware({ key: "redis", source: redisSource }),
  createAttachProteusSourceMiddleware({ key: "memory", source: memorySource }),
];
"
`;

exports[`scaffold > scaffold orchestration > multi-driver ctx extension > emits ExtraSources type and attach-sources middleware when 2+ drivers > context.ts 1`] = `
"import type {
  PylonHandler,
  PylonHttpContext,
  PylonHttpMiddleware,
  PylonSocketContext,
  PylonSocketMiddleware,
} from "@lindorm/pylon";
import type { IProteusSession } from "@lindorm/proteus";
import type { z, ZodType } from "zod";

type ExtraSources = {
  redis?: IProteusSession;
  memory?: IProteusSession;
};

export type ServerHttpContext<Data = any> = PylonHttpContext<Data> & ExtraSources;

export type ServerSocketContext<Payload = any> = PylonSocketContext<Payload> & ExtraSources;

export type ServerHttpMiddleware<C extends ServerHttpContext = ServerHttpContext> =
  PylonHttpMiddleware<C>;

export type ServerSocketMiddleware<C extends ServerSocketContext = ServerSocketContext> =
  PylonSocketMiddleware<C>;

// TODO: extend Data / State / Payload here to match your application's shape.
export type ServerHandler<
  Schema extends ZodType = ZodType<any>,
  Body = any,
> = PylonHandler<ServerHttpContext<z.infer<Schema>>, Body>;

export type ServerSocketHandler<Schema extends ZodType = ZodType<any>> =
  PylonSocketMiddleware<ServerSocketContext<z.infer<Schema>>>;
"
`;

exports[`scaffold > scaffold orchestration > multi-driver ctx extension > emits ExtraSources type and attach-sources middleware when 2+ drivers > pylon.ts 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/postgres/source.js";
import { attachSourcesMiddlewares } from "../middleware/attach-sources.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  httpMiddleware: [...attachSourcesMiddlewares],
  socket: {
    enabled: true,
    listeners: join(import.meta.dirname, "..", "listeners"),
    middleware: [...attachSourcesMiddlewares],
  },
  rooms: { presence: true },
  proteus: proteusSource,
  kryptos: { enabled: true },
  setup: async () => {
    await proteusSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > scaffold orchestration > rateLimit-only combo (with postgres + redis) > pylon.ts 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/postgres/source.js";
import { source as rateLimitSource } from "../proteus/redis/source.js";
import { attachSourcesMiddlewares } from "../middleware/attach-sources.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  httpMiddleware: [...attachSourcesMiddlewares],
  proteus: proteusSource,
  kryptos: { enabled: true },
  rateLimit: {
    enabled: true,
    proteus: rateLimitSource,
    strategy: "fixed",
    window: "1m",
    max: 60,
    // TODO: tune strategy/window/max for your traffic
  },
  setup: async () => {
    await proteusSource.connect();
    await rateLimitSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > scaffold orchestration > runs all write functions in sequence 1`] = `
[
  ".env",
  ".gitignore",
  "config/default.yml",
  "config/development.yml",
  "config/production.yml",
  "config/test.yml",
  "docker-compose.yml",
  "package.json",
  "src/features/example/example-handler.ts",
  "src/features/ping/ping-handler.ts",
  "src/features/webhooks/create-webhook-handler.ts",
  "src/features/webhooks/delete-webhook-handler.ts",
  "src/features/webhooks/get-webhook-handler.ts",
  "src/features/webhooks/list-webhooks-handler.ts",
  "src/features/webhooks/update-webhook-handler.ts",
  "src/index.ts",
  "src/iris/publishers/sample-publisher.ts",
  "src/iris/subscribers/sample-subscriber.ts",
  "src/listeners/_middleware.ts",
  "src/listeners/ping.ts",
  "src/logger/index.ts",
  "src/middleware/http-example.ts",
  "src/middleware/socket-example.ts",
  "src/proteus/entities/.gitkeep",
  "src/proteus/migrations/.gitkeep",
  "src/proteus/source.ts",
  "src/pylon/amphora.ts",
  "src/pylon/config.ts",
  "src/pylon/pylon.ts",
  "src/routes/_middleware.ts",
  "src/routes/v1/example.ts",
  "src/routes/webhooks/[id].ts",
  "src/routes/webhooks/index.ts",
  "src/types/context.ts",
  "src/workers/alive.ts",
  "src/workers/expiry-cleanup.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.mjs",
]
`;

exports[`scaffold > scaffold orchestration > session-only combo 1`] = `
[
  ".env",
  ".gitignore",
  "config/default.yml",
  "config/development.yml",
  "config/production.yml",
  "config/test.yml",
  "package.json",
  "src/features/example/example-handler.ts",
  "src/index.ts",
  "src/logger/index.ts",
  "src/middleware/http-example.ts",
  "src/pylon/amphora.ts",
  "src/pylon/config.ts",
  "src/pylon/pylon.ts",
  "src/routes/_middleware.ts",
  "src/routes/v1/example.ts",
  "src/types/context.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.mjs",
]
`;

exports[`scaffold > writeConfigFile > snapshot: auth only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  auth: z.object({
    clientId: z.string(),
    clientSecret: z.string(),
    issuer: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: kafka only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  kafka: z.object({
    brokers: z.string().transform((s) => s.split(",")),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: memory proteus only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: mongo + nats 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  mongo: z.object({
    url: z.string(),
  }),
  nats: z.object({
    servers: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: nats only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  nats: z.object({
    servers: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: no drivers 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: postgres + auth 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  postgres: z.object({
    url: z.string(),
  }),
  auth: z.object({
    clientId: z.string(),
    clientSecret: z.string(),
    issuer: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: postgres + kafka 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  postgres: z.object({
    url: z.string(),
  }),
  kafka: z.object({
    brokers: z.string().transform((s) => s.split(",")),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: postgres only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  postgres: z.object({
    url: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: rabbit only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  rabbit: z.object({
    url: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: redis only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  redis: z.object({
    url: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeConfigFile > snapshot: sqlite only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod";

export const config = configuration({
  node: z.object({
    env: z
      .enum(["production", "staging", "development", "test", "unknown"])
      .default("development"),
  }),
  pylon: z.object({ kek: z.string() }),
  server: z.object({ port: z.number() }),
  logger: z.object({
    level: z
      .enum(["error", "warn", "info", "verbose", "debug", "silly"])
      .default("info"),
  }),
  sqlite: z.object({
    path: z.string(),
  }),
}, { scope: import.meta.url });
"
`;

exports[`scaffold > writeDockerCompose > snapshot: iris redis 1`] = `
"services:
  redis:
    image: redis:7
    restart: unless-stopped
    ports:
      - "6379:6379"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: kafka + zookeeper 1`] = `
"services:
  zookeeper:
    image: confluentinc/cp-zookeeper:latest
    restart: unless-stopped
    environment:
      ZOOKEEPER_CLIENT_PORT: 2181
      ZOOKEEPER_TICK_TIME: 2000
    ports:
      - "2181:2181"
  kafka:
    image: confluentinc/cp-kafka:latest
    restart: unless-stopped
    depends_on:
      - zookeeper
    environment:
      KAFKA_BROKER_ID: 1
      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
    ports:
      - "9092:9092"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: mongo + kafka 1`] = `
"services:
  mongo:
    image: mongo:7
    restart: unless-stopped
    ports:
      - "27017:27017"
  zookeeper:
    image: confluentinc/cp-zookeeper:latest
    restart: unless-stopped
    environment:
      ZOOKEEPER_CLIENT_PORT: 2181
      ZOOKEEPER_TICK_TIME: 2000
    ports:
      - "2181:2181"
  kafka:
    image: confluentinc/cp-kafka:latest
    restart: unless-stopped
    depends_on:
      - zookeeper
    environment:
      KAFKA_BROKER_ID: 1
      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
    ports:
      - "9092:9092"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: mongo 1`] = `
"services:
  mongo:
    image: mongo:7
    restart: unless-stopped
    ports:
      - "27017:27017"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: mysql 1`] = `
"services:
  mysql:
    image: mysql:8
    restart: unless-stopped
    environment:
      MYSQL_DATABASE: app
      MYSQL_ROOT_PASSWORD: root
    ports:
      - "3306:3306"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: nats 1`] = `
"services:
  nats:
    image: nats:2
    restart: unless-stopped
    ports:
      - "4222:4222"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: postgres + rabbit 1`] = `
"services:
  postgres:
    image: postgres:16
    restart: unless-stopped
    environment:
      POSTGRES_DB: app
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
    ports:
      - "5432:5432"
  rabbitmq:
    image: rabbitmq:3-management
    restart: unless-stopped
    ports:
      - "5672:5672"
      - "15672:15672"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: postgres 1`] = `
"services:
  postgres:
    image: postgres:16
    restart: unless-stopped
    environment:
      POSTGRES_DB: app
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
    ports:
      - "5432:5432"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: proteus redis 1`] = `
"services:
  redis:
    image: redis:7
    restart: unless-stopped
    ports:
      - "6379:6379"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: rabbit 1`] = `
"services:
  rabbitmq:
    image: rabbitmq:3-management
    restart: unless-stopped
    ports:
      - "5672:5672"
      - "15672:15672"
"
`;

exports[`scaffold > writeDockerCompose > snapshot: redis dedup 1`] = `
"services:
  redis:
    image: redis:7
    restart: unless-stopped
    ports:
      - "6379:6379"
"
`;

exports[`scaffold > writeEnvFile > none drivers 1`] = `
"NODE_ENV=development
PYLON_KEK=kryptos:test-fixed-kek-placeholder
"
`;

exports[`scaffold > writeEnvFile > postgres + kafka 1`] = `
"NODE_ENV=development
PYLON_KEK=kryptos:test-fixed-kek-placeholder
POSTGRES_URL=postgresql://localhost:5432/app
KAFKA_BROKERS=localhost:9092
"
`;

exports[`scaffold > writeIrisSamples > snapshot: kafka publisher + subscriber > publisher 1`] = `
"import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold > writeIrisSamples > snapshot: kafka publisher + subscriber > subscriber 1`] = `
"import { logger } from "../../logger/index.js";
import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold > writeIrisSamples > snapshot: nats publisher + subscriber > publisher 1`] = `
"import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold > writeIrisSamples > snapshot: nats publisher + subscriber > subscriber 1`] = `
"import { logger } from "../../logger/index.js";
import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold > writeIrisSamples > snapshot: rabbit publisher + subscriber > publisher 1`] = `
"import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold > writeIrisSamples > snapshot: rabbit publisher + subscriber > subscriber 1`] = `
"import { logger } from "../../logger/index.js";
import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold > writeIrisSamples > snapshot: redis publisher + subscriber > publisher 1`] = `
"import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold > writeIrisSamples > snapshot: redis publisher + subscriber > subscriber 1`] = `
"import { logger } from "../../logger/index.js";
import { source as irisSource } from "../source.js";
import { SampleMessage } from "../messages/SampleMessage.js";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold > writePackageJson > adds docker scripts when driver needs compose 1`] = `
"{
  "name": "test-app",
  "version": "0.0.0",
  "private": true,
  "type": "module",
  "engines": {
    "node": ">=24.13.0"
  },
  "scripts": {
    "dev": "tsx watch src/index.ts",
    "build": "tsc -p tsconfig.build.json",
    "start": "node dist/index.js",
    "typecheck": "tsc --noEmit",
    "test": "vitest run",
    "docker:up": "docker compose up -d",
    "docker:down": "docker compose down"
  },
  "dependencies": {},
  "devDependencies": {}
}
"
`;

exports[`scaffold > writePackageJson > default answers produce minimal package.json 1`] = `
"{
  "name": "test-app",
  "version": "0.0.0",
  "private": true,
  "type": "module",
  "engines": {
    "node": ">=24.13.0"
  },
  "scripts": {
    "dev": "tsx watch src/index.ts",
    "build": "tsc -p tsconfig.build.json",
    "start": "node dist/index.js",
    "typecheck": "tsc --noEmit",
    "test": "vitest run"
  },
  "dependencies": {},
  "devDependencies": {}
}
"
`;

exports[`scaffold > writePylonFile > snapshot: all features + all proteus workers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/source.js";
import { source as irisSource } from "../iris/source.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  socket: {
    enabled: true,
    listeners: join(import.meta.dirname, "..", "listeners"),
  },
  rooms: { presence: true },
  proteus: proteusSource,
  kryptos: { enabled: true },
  iris: irisSource,
  queue: { enabled: true },
  webhook: { enabled: true },
  audit: {
    enabled: true,
    // sanitise: (body) => body,
    // skip: (ctx) => false,
    // entities: [],
  },
  workers: join(import.meta.dirname, "..", "workers"),
  setup: async () => {
    await proteusSource.connect();
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: auth only (session auto-forced) 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  session: {
    enabled: true,
    name: "sid",
    encrypted: true,
    httpOnly: true,
    sameSite: "lax",
    secure: false, // TODO: flip to true in production (behind HTTPS)
    expiry: "7d",
  },
  auth: {
    clientId: config.auth.clientId,
    clientSecret: config.auth.clientSecret,
    issuer: config.auth.issuer,
    router: {
      pathPrefix: "/auth",
      authorize: {
        scope: ["openid", "profile", "email"],
        responseType: "code",
      },
    },
  },
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: http + postgres + rabbit + webhooks + audit 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/source.js";
import { source as irisSource } from "../iris/source.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  proteus: proteusSource,
  kryptos: { enabled: true },
  iris: irisSource,
  queue: { enabled: true },
  webhook: { enabled: true },
  audit: {
    enabled: true,
    // sanitise: (body) => body,
    // skip: (ctx) => false,
    // entities: [],
  },
  setup: async () => {
    await proteusSource.connect();
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: http + postgres + rabbit 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/source.js";
import { source as irisSource } from "../iris/source.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  proteus: proteusSource,
  kryptos: { enabled: true },
  iris: irisSource,
  queue: { enabled: true },
  setup: async () => {
    await proteusSource.connect();
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: http + postgres 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/source.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  proteus: proteusSource,
  kryptos: { enabled: true },
  setup: async () => {
    await proteusSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: http + rabbit 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as irisSource } from "../iris/source.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  iris: irisSource,
  queue: { enabled: true },
  setup: async () => {
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: http + socket, no drivers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  socket: {
    enabled: true,
    listeners: join(import.meta.dirname, "..", "listeners"),
  },
  rooms: { presence: true },
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: http only, no drivers, no workers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: rate limit with proteus 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/postgres/source.js";
import { source as rateLimitSource } from "../proteus/redis/source.js";
import { attachSourcesMiddlewares } from "../middleware/attach-sources.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  httpMiddleware: [...attachSourcesMiddlewares],
  proteus: proteusSource,
  kryptos: { enabled: true },
  rateLimit: {
    enabled: true,
    proteus: rateLimitSource,
    strategy: "fixed",
    window: "1m",
    max: 60,
    // TODO: tune strategy/window/max for your traffic
  },
  setup: async () => {
    await proteusSource.connect();
    await rateLimitSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: session + auth + rate limit + postgres + redis 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/postgres/source.js";
import { source as rateLimitSource } from "../proteus/redis/source.js";
import { attachSourcesMiddlewares } from "../middleware/attach-sources.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  httpMiddleware: [...attachSourcesMiddlewares],
  proteus: proteusSource,
  kryptos: { enabled: true },
  session: {
    enabled: true,
    proteus: rateLimitSource,
    name: "sid",
    encrypted: true,
    httpOnly: true,
    sameSite: "lax",
    secure: false, // TODO: flip to true in production (behind HTTPS)
    expiry: "7d",
  },
  auth: {
    clientId: config.auth.clientId,
    clientSecret: config.auth.clientSecret,
    issuer: config.auth.issuer,
    router: {
      pathPrefix: "/auth",
      authorize: {
        scope: ["openid", "profile", "email"],
        responseType: "code",
      },
    },
  },
  rateLimit: {
    enabled: true,
    proteus: rateLimitSource,
    strategy: "fixed",
    window: "1m",
    max: 60,
    // TODO: tune strategy/window/max for your traffic
  },
  setup: async () => {
    await proteusSource.connect();
    await rateLimitSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: session only, no proteus 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  session: {
    enabled: true,
    name: "sid",
    encrypted: true,
    httpOnly: true,
    sameSite: "lax",
    secure: false, // TODO: flip to true in production (behind HTTPS)
    expiry: "7d",
  },
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: session with proteus (persistent) 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";
import { source as proteusSource } from "../proteus/source.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  routes: join(import.meta.dirname, "..", "routes"),
  proteus: proteusSource,
  kryptos: { enabled: true },
  session: {
    enabled: true,
    proteus: proteusSource,
    name: "sid",
    encrypted: true,
    httpOnly: true,
    sameSite: "lax",
    secure: false, // TODO: flip to true in production (behind HTTPS)
    expiry: "7d",
  },
  setup: async () => {
    await proteusSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writePylonFile > snapshot: socket only, no drivers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { join } from "path";
import { logger } from "../logger/index.js";
import { amphora } from "./amphora.js";
import { config } from "./config.js";

export const pylon = new Pylon({
  logger,
  amphora,
  name: config.npm.package.name,
  version: config.npm.package.version,
  environment: config.node.env,
  port: config.server.port,
  socket: {
    enabled: true,
    listeners: join(import.meta.dirname, "..", "listeners"),
  },
  rooms: { presence: true },
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold > writeWorkerFiles > snapshot: all three > amphora-entity-sync content 1`] = `
"import { createAmphoraEntityWorker } from "@lindorm/pylon";
import { amphora } from "../pylon/amphora.js";
import { logger } from "../logger/index.js";
import { source as proteusSource } from "../proteus/source.js";

export default createAmphoraEntityWorker({ amphora, logger, proteus: proteusSource });
"
`;

exports[`scaffold > writeWorkerFiles > snapshot: all three > expiry-cleanup content 1`] = `
"import { createExpiryCleanupWorker } from "@lindorm/pylon";
import { logger } from "../logger/index.js";
import { source as proteusSource } from "../proteus/source.js";

// TODO: add your entities with expiry fields to this array
export default createExpiryCleanupWorker({ logger, proteus: proteusSource, targets: [] });
"
`;

exports[`scaffold > writeWorkerFiles > snapshot: all three > kryptos-rotation content 1`] = `
"import { createKryptosRotationWorker } from "@lindorm/pylon";
import { logger } from "../logger/index.js";
import { source as proteusSource } from "../proteus/source.js";

export default createKryptosRotationWorker({ logger, proteus: proteusSource });
"
`;

exports[`scaffold > writeWorkerFiles > snapshot: amphora-entity-sync only > amphora-entity-sync content 1`] = `
"import { createAmphoraEntityWorker } from "@lindorm/pylon";
import { amphora } from "../pylon/amphora.js";
import { logger } from "../logger/index.js";
import { source as proteusSource } from "../proteus/source.js";

export default createAmphoraEntityWorker({ amphora, logger, proteus: proteusSource });
"
`;

exports[`scaffold > writeWorkerFiles > snapshot: expiry-cleanup only > expiry-cleanup content 1`] = `
"import { createExpiryCleanupWorker } from "@lindorm/pylon";
import { logger } from "../logger/index.js";
import { source as proteusSource } from "../proteus/source.js";

// TODO: add your entities with expiry fields to this array
export default createExpiryCleanupWorker({ logger, proteus: proteusSource, targets: [] });
"
`;

exports[`scaffold > writeWorkerFiles > snapshot: kryptos-rotation only > kryptos-rotation content 1`] = `
"import { createKryptosRotationWorker } from "@lindorm/pylon";
import { logger } from "../logger/index.js";
import { source as proteusSource } from "../proteus/source.js";

export default createKryptosRotationWorker({ logger, proteus: proteusSource });
"
`;
